<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/menu_popular"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search"
            android:iconTint="@color/gold_dark"/>
    </group>

    <group android:id="@+id/menu_personal"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_watchlist"
            android:title="@string/menu_watchlist"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_lists"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_diary"
            android:title="@string/menu_diary"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_review"
            android:title="@string/menu_reviews"
            android:iconTint="@color/gold_dark"/>
    </group>

    <group android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"
            android:iconTint="@color/gold_dark"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_sign_out"
            android:iconTint="@color/gold_dark"/>
    </group>
</menu>